--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
 version: '3.8'
 
 services:
-  # Layanan Nginx sebagai Reverse Proxy Terpusat
-  nginx:
-    image: nginx:stable-alpine
-    container_name: shared-nginx
+  # Layanan Caddy sebagai Reverse Proxy Terpusat
+  caddy:
+    image: caddy:2-alpine
+    container_name: shared-caddy
     restart: always
     ports:
-      - "${NGINX_PORT}:80"
+      - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./nginx/logs:/var/log/nginx
+      - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./caddy/data:/data
+      - ./caddy/config:/config
     networks:
-      - ${NETWORK_NAME}
+      - shared_net
 
   # Layanan PostgreSQL
   pgsql:
@@ -26,9 +28,9 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     volumes:
-      - pg_data:${PGDATA}
+      - pg_data:/var/lib/postgresql/data
     networks:
-      - ${NETWORK_NAME}
+      - shared_net
 
   # Layanan Redis
   redis:
@@ -38,13 +40,12 @@ services:
     ports:
       - "${REDIS_PORT}:6379"
     networks:
-      - ${NETWORK_NAME}
+      - shared_net
 
 # Jaringan yang akan digunakan oleh semua layanan terpusat
 networks:
-  ${NETWORK_NAME}:
+  shared_net:
     driver: bridge
-    name: ${NETWORK_NAME}
 
 # Volume untuk persistensi data
 volumes:
