--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./caddy:/etc/caddy
       - ./caddy/data:/data
       - ./caddy/config:/config
     networks:
